fixed button and responsiveness

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                     <!-- <div class = "left-side-wrapper"> -->
                         <!-- <a href="#" class="btn main-btn mt-5">Search</a> -->
                         <div class="left-panel" id="left-panel">
-                            <button class="collapse-btn" onclick="togglePanel()"></button>
+                            <button class="collapse-btn" onclick="togglePanel()">
+                                <img src="images/hamburger.png"/>
+                            </button>
                             <h3>Panel content</h3>
                             <div class="panel-content">
                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
