--- a/index.html
+++ b/index.html
@@ -76,14 +76,16 @@
     <section class="banner-wrapper wrapper">
         <div class="container">
             <div class="row">
+                <div class="second-header">
+                    <button class="collapse-btn" onclick="togglePanel()">
+                        <img src="images/hamburger.png"/>
+                    </button>
+                </div>
                 <!-- LEFT SIDE -->
                 <div class="col-lg-4 mb-3 order-lg-1 order-2">
                     <!-- <div class = "left-side-wrapper"> -->
                         <!-- <a href="#" class="btn main-btn mt-5">Search</a> -->
                         <div class="left-panel" id="left-panel">
-                            <button class="collapse-btn" onclick="togglePanel()">
-                                <img src="images/hamburger.png"/>
-                            </button>
                             <h3>Panel content</h3>
                             <div class="panel-content">
 
