Make left panel go to the top of right panel in smaller resolution

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </button>
                 </div>
                 <!-- LEFT SIDE -->
-                <div class="col-lg-4 mb-3 order-lg-1 order-2">
+                <div class="col-lg-4 order-lg-1">
                     <!-- <div class = "left-side-wrapper"> -->
                         <!-- <a href="#" class="btn main-btn mt-5">Search</a> -->
                         <div class="left-panel" id="left-panel">
@@ -142,7 +142,7 @@
                     <!-- </div> -->
                 </div>
                 <!-- RIGHT SIDE -->
-                <div class="col-lg-8 mb-7 order-lg-2 order-1">
+                <div class="col-lg-8 order-lg-2">
                     <!-- <div> -->
                         <!-- The Three Tabs on the right side -->
                         <div class = "right-panel"> 
