--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href = "css/homepage.css">
     <link rel="stylesheet" href = "css/bag-window.css">
     <link rel="stylesheet" href = "css/class-list.css">
+    <link rel="stylesheet" href = "css/chatButton.css">
 
 </head>
 
@@ -250,13 +251,13 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid pt-5 px-0">
+        <!-- <div class="container-fluid pt-5 px-0">
             <div class="row">
                 <div class="col-12">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14016.9363925419!2d77.18302375!3d28.5627323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1654846055849!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="container-fluid copyright-section   ">
             <p>© 2023 Unemployed Dev WebReg Hackathon. All Rights Reserved</p>
         </div>
@@ -264,13 +265,53 @@
     <!-- Footer Section Exit  -->
     
     <!-- whatsapp Intigration -->
-    <div class="whatsapp-icon-wrapper">
+    <!-- <div class="whatsapp-icon-wrapper">
         <div class="whatsapp-button-class"><a href="#"
                 target="_blank&quot;">
                 <img src="./images/whatspp.png"></p> </a>
         </div>
+    </div> -->
+
+    <!-- Panic Button Integration -->
+    <div class="panic-icon-wrapper">
+        <div class="panic-button-class">
+            <button class="panic-button" onclick="openHelp()">
+                <img src="./images/panic-button.png">
+            </button>
+        </div>
     </div>
 
+    <!-- Panic Button Popup -->
+    <div class="chat-popup" id="openHelp">
+        <form action="/action_page.php" class="help-container">
+            <h1 style="font-size: 30px">Feeling Overwhelmed?</h1>
+            <!-- <label for="msg"><b>Message</b></label> -->
+            <!-- <textarea placeholder="Type message.." name="msg" required></textarea> -->
+            Mental health resources: <br>
+            <a href="https://www.ootify.com/">Ootify Resources</a><br><br>
+
+            UCI Wellness, Health & Counseling Services: <br>
+            <a href="https://www.whcs.uci.edu/campus-social-work">Campus Social Workers</a><br>
+            <a href="https://counseling.uci.edu/contact-us/emergency-assistance/">UCI Crisis Care</a><br>
+            <a href="https://counseling.uci.edu/">Counseling Center</a><br>
+            <a href="https://dsc.uci.edu/">Disability Services Center</a><br>
+            <a href="https://counseling.uci.edu/resources/resources-for-faculty-staff/faculty-and-staff-mental-health-services/">Faculty & Staff Mental Health Care</a><br>
+            <a href="https://studentwellness.uci.edu/">Student Wellness & Health Promotion</a>
+
+            <!-- <button type="submit" class="btn">Send</button> -->
+            <button type="button" class="btn cancel" onclick="closeHelp()">Close</button>
+        </form>
+    </div>
+
+
+
+
+
+
+
+
+
+    <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
@@ -278,6 +319,7 @@
     <script src="js/panel.js"></script>
     <script src="js/addClass.js"></script>
     <script src="js/bag.js"></script>
+    <script src="js/chatButton.js"></script>
 
 
 </body>
