Fixed reload class bug

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <div class = "tab-pane active" id = "ScheduleOfClasses">
                                     <div class = "row border g-0 rounded shadow-sm">
                                         <!-- Divide into two left and right -->
-                                        <div class="ScheduleOfClassesContainer">
+                                        <div id="ScheduleOfClassesContainerID" class="ScheduleOfClassesContainer">
                     
                                                 <!-- TABLE GOES HERE-->
                                                 <table id="courses-table">
