Change the bag icon, make the bag window draggable, responsive in iphone X, 8, 8plus

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 <!-- A fixed backpack on all tabs -->
                                 <div class="bag-icon-wrapper">
                                     <div class="bag-button-class">
-                                             <button id="open-window"> <img src="./images/backpack.png"></button>
+                                             <button class = "bag-button"id="open-window"> <img src="./images/newbackpack.png"></button>
                                     </div>
                                 </div>
                                 <!-- Each tab has its own content -->
@@ -320,6 +320,7 @@
     <script src="js/addClass.js"></script>
     <script src="js/bag.js"></script>
     <script src="js/chatButton.js"></script>
+    <script src="js/moveBagWindow.js"></script>
 
 
 </body>
