fixed the top space of the schedule table

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <!-- Each tab has its own content -->
                                 <!-- Schedule of classes tab -->
                                 <div class = "tab-pane active" id = "ScheduleOfClasses">
-                                    <div class = "row border g-0 rounded shadow-sm">
+                                    <div class = "row margin: 0px">
                                         <!-- Divide into two left and right -->
                                         <div id="ScheduleOfClassesContainerID" class="ScheduleOfClassesContainer">
                     
