Fixed the overlay chat box over the bag

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <!-- <a href="#" class="btn main-btn mt-5">Search</a> -->
                         <div class="left-panel" id="left-panel">
                             <div class="empty"> </div>
-                            <h3>Panel content</h3>
+                            <h3>Schedule of Classes</h3>
                             <div class="panel-content">
 
                                <form id="class-form">
@@ -140,7 +140,7 @@
                                   <option value="geography">Geography</option>
                                 </select>
                                 <br>
-                                <button  class="advanced" type="button">------Advanced Filter------</button>
+                                <button  class="advanced" type="button">ADVANCED FILTER</button>
                                 <div class="content">
                                   <!-- Create a row -->
                                   <div class="row">
