--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
                         <div class = "right-panel"> 
                             <!-- Bag window -->
                             <div id="bag-window-id" class = "bag-window-class">
-                                <button id="bag-window-close">Close</button>
+                                <div class="button-area">
+                                    <button id="bag-window-close">x</button>
+                                </div>
                                 <ul id="bag-list"></ul>
                             </div>
                             <!-- Use boostrap feature "nav" to let them know it is like a menu -->
