--- a/index.html
+++ b/index.html
@@ -231,7 +231,9 @@
                                 <!-- A fixed backpack on all tabs -->
                                 <div class="bag-icon-wrapper">
                                     <div class="bag-button-class">
-                                             <button class = "bag-button"id="open-window"> <img src="./images/newbackpack.png"></button>
+                                             <button class = "bag-button"id="open-window"> <img src="./images/newbackpack.png">
+                                                <div id="notification"></div>
+                                            </button>
                                     </div>
                                 </div>
 
