--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
                                     <button id="bag-window-close">x</button>
                                 </div>
                                 <ul id="bag-list"></ul>
+                                <div class="bottom">
+                                    <button id="save-button">Enroll</button>
+                                </div>
                             </div>
                             <!-- Use boostrap feature "nav" to let them know it is like a menu -->
                             <ul class = "nav nav-tabs">
