--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
                             <!-- Bag window -->
                             <div id="bag-window-id" class = "bag-window-class">
                                 <div class="button-area">
-                                    <button id="bag-window-close">x</button>
+                                    <div class="close-bag">close bag</div>
+                                    <button id="bag-window-close">X</button>
                                 </div>
                                 <ul id="bag-list"></ul>
                                 <div class="bottom">
