panic button close

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <!-- Bag window -->
                             <div id="bag-window-id" class = "bag-window-class">
                                 <div class="button-area">
-                                    <div class="close-bag">close bag</div>
+                                    <div class="close-bag">Close Bag</div>
                                     <button id="bag-window-close">X</button>
                                 </div>
                                 <ul id="bag-list"></ul>
