Change chat icon and make it smaller

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <div class="panic-icon-wrapper">
         <div class="panic-button-class">
             <button class="panic-button" onclick="openHelp()">
-                <img src="./images/panic-button.png">
+                <img src="./images/whiteChatIcon.png">
             </button>
         </div>
     </div>
