--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Degree Work</a>
+                                <a class="nav-link" href="#">Degree Work</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                                <a class="nav-link" href = "https://catalogue.uci.edu/" id="navbarDropdown" role="button"
                                    >
                                     General Catalog
                                 </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="website.html">Website</a></li>
                                     <li><a class="dropdown-item" href="branding.html">Branding</a></li>
                                     <li><a class="dropdown-item" href="advertising.html">Advertising</a></li>
                                     <li><a class="dropdown-item" href="social-media.html">Social Media</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                <a class="nav-link" href="#">Web Admin</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="#">Log Out</a>
                             </li>
                         </ul>
                     </div>
