Fixed the instruction statement

--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
                                     <div class = "row">
                                     <div class="initialOpenPage" id ="initialOpenPageID">
                                         <div class="enrollWindowStatement">
-                                            <p>Hello Fellow Anteater!</p>
-                                            <p>Welcome to the new UCI WebReg</p>
-                                            <p>Your enrollment window open on <span>Mar/30/2023 at 4:30PM</span></p>
-                                            <p>Check out our <a href="https://www.reg.uci.edu/registrar/soc/webreg.html">instruction for using this new WebReg</a></p>
+                                            <p>Hello, Fellow Anteater!</p>
+                                            <p>Welcome to the new UCI WebReg!</p>
+                                            <p>Your enrollment window opens on <span>Mar/30/2023 at 4:30PM</span></p>
+                                            <p>Check out our <a href="https://www.reg.uci.edu/registrar/soc/webreg.html">instruction video on how to use the new WebReg</a></p>
                                         </div>
 
                                         <div class="peterImgClass">
