--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Degree Work</a>
+                                <a class="nav-link" href="#">Degree Works</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href = "https://catalogue.uci.edu/" id="navbarDropdown" role="button"
@@ -217,7 +217,7 @@
                             <!-- Bag window -->
                             <div id="bag-window-id" class = "bag-window-class">
                                 <div class="button-area">
-                                    <div class="close-bag">Close Bag</div>
+                                    <!-- <div class="close-bag">Close Bag</div> -->
                                     <button id="bag-window-close">X</button>
                                 </div>
                                 <ul id="bag-list"></ul>
