--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
     <!-- Custom JS -->
+    <script src="js/courses.js"></script>
     <script src="js/panel.js"></script>
     <script src="js/addClass.js"></script>
     <script src="js/bag.js"></script>
