--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                             <p>Hello, Fellow Anteater!</p>
                                             <p>Welcome to the new UCI WebReg!</p>
                                             <p>Your enrollment window opens on <span>Mar/30/2023 at 4:30PM</span></p>
-                                            <p>Check out our <a href="https://www.reg.uci.edu/registrar/soc/webreg.html">instruction video on how to use the new WebReg</a></p>
+                                            <p>Check out our <a href="https://www.youtube.com/shorts/-1V5texZApg">instruction video on how to use the new WebReg</a></p>
                                         </div>
 
                                         <div class="peterImgClass">
