Change the alert view

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href = "css/frontPage.css">
     <link rel="stylesheet" href = "css/suggestedClass.css">
     <link rel="stylesheet" href = "css/studyList.css">
+    <link rel="stylesheet" href = "css/notifyPopUp.css">
 
 </head>
 
