drop button fix

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                             <div class="empty"> </div>
                             <h3>Schedule of Classes</h3>
                             <div class="panel-content">
-
+                                <div class="search">
+                                    
+                                </div>
                                <form id="class-form">
                                 <label for="term">Term:</label>
                                 <select id="term">
@@ -207,7 +209,6 @@
                                
                               </form>
                             </div>
-
                         </div>
                     <!-- </div> -->
                 </div>
