Change error prevention warning pop up, added auto enroll button + a modal pop window on click

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                                 </div>
                                 <ul id="bag-list"></ul>
                                 <div class="bottom">
-                                    <button id="enroll-button">Enroll</button>
-                                    <button id= "auto-enroll-button">Auto Enroll</button>
+                                    <div><button id="enroll-button">Enroll</button></div>
+                                    <div class = "autoEnrollClass"><button id= "auto-enroll-button">Auto Enroll</button></div>
                                 </div>
                             </div>
                             <!-- Use boostrap feature "nav" to let them know it is like a menu -->
