--- a/index.html
+++ b/index.html
@@ -98,10 +98,17 @@
                             <div class="empty"> </div>
                             <h3>Schedule of Classes</h3>
                             <div class="panel-content">
+                                
                                 <div class="search">
-                                    
+                                    <label for="course-search">Search for a course:</label>
+                                    <input type="text" id="course-search" placeholder="Search courses...">
+                                    <div id="search-results"></div>
                                 </div>
+
                                <form id="class-form">
+
+
+
                                 <label for="term">Term:</label>
                                 <select id="term">
                                   <option value="">All</option>
