--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <!-- <a href="#" class="btn main-btn mt-5">Search</a> -->
                         <div class="left-panel" id="left-panel">
                             <div class="empty"> </div>
-                            <h3>Schedule of Classes</h3>
+                            <h3>Course Filter</h3>
                             <div class="panel-content">
 
 
@@ -104,7 +104,7 @@
 
                                 <div class="search">
                                     <label for="course-search">Search for a course:</label>
-                                    <input type="text" id="course-search" placeholder="Search courses...">
+                                    <input type="text" id="course-search" placeholder="Enter Course..." autocomplete="off">
                                     <div id="search-results"></div>
                                 </div>
 
