Solve js conflict

--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
     <script src="js/elective.js"></script>
     <script src="js/studyList.js"></script>
     <script src="js/auto-enroll.js"></script>
+    <script src="js/selectOptions.js"></script>
 
 </body>
 
