Fix default text in the window bag

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                                     <!-- <div class="close-bag">Close Bag</div> -->
                                     <button id="bag-window-close">X</button>
                                 </div>
+                                <p class = "defaultWindowBagTxt" id = "defaultWindowTxtID">You have not added any courses yet.</p>
                                 <ul id="bag-list"></ul>
                                 <div class="bottom">
                                     <div><button id="enroll-button">Enroll</button></div>
