added js for chat box

--- a/index.html
+++ b/index.html
@@ -403,8 +403,7 @@
               <button>Send</button>
             </div>
             <!-- <button type="button" class="btn cancel" onclick="closeHelp()">Close</button> -->
-          </div>
-        
+        </div>
     </div>
 
 
@@ -432,7 +431,8 @@
     <script src="js/studyList.js"></script>
     <script src="js/auto-enroll.js"></script>
     <script src="js/selectOptions.js"></script>
-
+    <script src="js/chat-box.js"></script>
+    
 </body>
 
 </html>
