--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href = "css/notifyPopUp.css">
     <link rel="stylesheet" href = "css/auto-enroll-btn.css">
     <link rel="stylesheet" href = "css/chat-box.css">
+    <link rel="stylesheet" href = "css/info.css">
+
 </head>
 
 <body class="home">
@@ -431,7 +433,9 @@
     <script src="js/studyList.js"></script>
     <script src="js/auto-enroll.js"></script>
     <script src="js/selectOptions.js"></script>
-    <script src="js/chat-box.js"></script>
+    <script src="js/chat-box.js"></script>    
+    <script src="js/info.js"></script>
+
     
 </body>
 
