--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                                       </div>
                                   </div>
                                 </div>
-                                <div class="searchButton"><input type="submit" value="Submit" class="circle-button"></div>
+                                <div class="searchButton">
+                                    <input type="submit" value="Submit" class="circle-button">
+                                </div>
                                
                               </form>
                             </div>
