--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href = "css/auto-enroll-btn.css">
     <link rel="stylesheet" href = "css/chat-box.css">
     <link rel="stylesheet" href = "css/info.css">
+    <link rel="stylesheet" href = "css/dropPopUp.css">
 
 </head>
 
