--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 </head>
 
 <body class="home">
+    
+    <input id="slideBar" type="range" min="80" max="140" value="110" smooth=yes>
     <!-- Navbar Section Start -->
     <header id="full_nav">
         <div class="header fixed-top">
@@ -437,6 +439,7 @@
     <script src="js/selectOptions.js"></script>
     <script src="js/chat-box.js"></script>    
     <script src="js/info.js"></script>
+    <script src="js/zoom.js"></script>
 
     
 </body>
