add alt text and delete html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="index.html">
-                        <img src="./images/logo.png" alt="">
+                        <img src="./images/logo.png" alt="UCI log">
                         <p>UCI WebReg</p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="second-header">
                     <button class="collapse-btn" onclick="togglePanel()">
-                        <img src="images/hamburger.png"/>
+                        <img src="images/hamburger.png" alt="collapsible button that looks like a burger"/>
                     </button>
                 </div>
                 <!-- LEFT SIDE -->
@@ -230,7 +230,7 @@
                                 <!-- A fixed backpack on all tabs -->
                                 <div class="bag-icon-wrapper">
                                     <div class="bag-button-class">
-                                             <button class = "bag-button"id="open-window"> <img src="./images/newbackpack.png">
+                                             <button class = "bag-button"id="open-window"> <img src="./images/newbackpack.png" alt="Bag pack">
                                                 <div id="notification"></div>
                                             </button>
                                     </div>
@@ -249,7 +249,7 @@
                                         </div>
 
                                         <div class="peterImgClass">
-                                                <img src="images/peterTheAnteater.png">
+                                                <img src="images/peterTheAnteater.png" alt="An anteater holding books">
                                         </div>
 
                                      </div>
@@ -286,7 +286,7 @@
                                             </div>
                                             <!-- Caledendar View -->
                                             <div class="tab-pane two" id="calendarView">
-                                                <img src="./images/scheduleWebReg.png">
+                                                <img src="./images/scheduleWebReg.png" alt="A calendar schedule">
                                             </div>
                                         </div>
                                     </div>
@@ -353,7 +353,7 @@
         <div class="container">
             <div class="row align-items-center mb-5">
                 <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0 footer-logo">
-                    <img src="./images/logo.png" />
+                    <img src="./images/logo.png" alt="UCI log"/>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
                     <h5><a href="#">+91 121 212 1221</a></h5>
@@ -362,10 +362,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
                     <ul class="link-widget p-0">
-                        <li><a href="#"><img src="./images/social-media/f.webp" /></a></li>
-                        <li><a href="#"><img src="./images/social-media/i.webp" /></a></li>
-                        <li><a href="#"><img src="./images/social-media/l.webp" /></a></li>
-                        <li><a href="#"><img src="./images/social-media/t.webp" /></a></li>
+                        <li><a href="#"><img src="./images/social-media/f.webp" alt="Facebook logo"/></a></li>
+                        <li><a href="#"><img src="./images/social-media/i.webp" alt="Instagram logo"/></a></li>
+                        <li><a href="#"><img src="./images/social-media/l.webp" alt="Linkedin logo"/></a></li>
+                        <li><a href="#"><img src="./images/social-media/t.webp" alt="Twitter logo"/></a></li>
                     </ul>
                 </div>
             </div>
@@ -395,7 +395,7 @@
     <div class="panic-icon-wrapper">
         <div class="panic-button-class">
             <button class="panic-button" onclick="openHelp()">
-                <img src="./images/whiteChatIcon.png">
+                <img src="./images/whiteChatIcon.png" alt="chat icon">
             </button>
         </div>
     </div>
