--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
     <!-- Custom JS -->
+
+    <script src="js/defaultClasses.js"></script>
     <script src="js/courses.js"></script>
     <script src="js/panel.js"></script>
     <script src="js/addClass.js"></script>
